      destination with a default stacking policy.  (Andrew Bennetts)

  DOCUMENTATION:

    * The generated manpage now explicitly lists aliases as commands.
      (James Westby, #336998)

  API CHANGES:

    * New sort order for ``get_record_stream`` ``groupcompress`` which
      sorts optimally for use with groupcompress compressors. (John Arbash
      Meinel, Robert Collins)

  INTERNALS:


bzr 1.13rc1 "paraskavedekatriaphobia" 2009-03-10
------------------------------------------------
This release includes bug fixes and a few performance and feature improvements.
GNU Changelog output can now be produced by ``bzr log --format gnu-changelog``.
Debug flags can now be set in ``~/.bazaar/bazaar.conf``. Lightweight Checkouts
and Stacked Branches should both be much faster over remote connections.

  COMPATIBILITY BREAKS:

    * ``bzr log --line`` now indicates which revisions are merges with
      `[merge]` after the date.  Scripts which parse the output of this
      command may need to be adjusted.
      (Neil Martinsen-Burrell)

  NEW FEATURES:

    * ``bzr reconfigure`` now supports --with-trees and --with-no-trees
      options to change the default tree-creation policy of shared
      repositories.  (Matthew Fuller, Marius Kruger, #145033)

    * Debug flags can now be set in ``~/.bazaar/bazaar.conf``.
      (Martin Pool)

    * Filtered views provide a mask over the tree so that users can focus
      on a subset of a tree when doing their work. See ``Filtered views``
      in chapter 7 of the User Guide and ``bzr help view`` for details.
      (Ian Clatworthy)

    * GNU Changelog output can now be produced by ``bzr log --format
      gnu-changelog``.  (Andrea Bolognani, Martin Pool)

    * The ``-Dmemory`` flag now gives memory information on Windows.
      (John Arbash Meinel)

    * Multiple authors for a commit can now be recorded by using the "--author"
      option multiple times. (James Westby, #185772)
