@@ -30,6 +30,7 @@ from bzrlib.memorytree import MemoryTree
 from bzrlib.tests import (
         SymlinkFeature,
         TestCase,
+        TestCaseInTempDir,
         TestCaseWithTransport,
         )
 
@@ -2221,3 +2222,28 @@ class Test_InvEntryToDetails(TestCaseWithDirState):
         inv_entry.symlink_target = u'link-target'
         details = self.assertDetails(('l', 'link-target', 0, False,
                                       'link-revision-id'), inv_entry)
+
+
+class TestSha1Provider(TestCaseInTempDir):
+
+    def test_sha1provider_is_an_interface(self):
+        p = dirstate.Sha1Provider()
+        self.assertRaises(NotImplementedError, p.sha1, "foo")
+        self.assertRaises(NotImplementedError, p.stat_and_sha1, "foo")
+
+    def test_defaultsha1provider_sha1(self):
+        text = 'test\r\nwith\nall\rpossible line endings\r\n'
+        self.build_tree_contents([('foo', text)])
+        expected_sha = osutils.sha_string(text)
+        p = dirstate.DefaultSha1Provider()
+        self.assertEqual(expected_sha, p.sha1('foo'))
+
+    def test_defaultsha1provider_stat_and_sha1(self):
+        text = 'test\r\nwith\nall\rpossible line endings\r\n'
+        self.build_tree_contents([('foo', text)])
+        expected_sha = osutils.sha_string(text)
+        p = dirstate.DefaultSha1Provider()
+        statvalue, sha1 = p.stat_and_sha1('foo')
+        self.assertTrue(len(statvalue) >= 10)
+        self.assertEqual(len(text), statvalue.st_size)
+        self.assertEqual(expected_sha, sha1)
